--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,6 @@ jar {
 }
 
 dependencies {
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 }
