--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'idea'
 apply plugin: 'java'
+apply from: 'libraries.gradle'
 
 sourceCompatibility = 1.8
 
@@ -17,6 +18,6 @@ jar {
 }
 
 dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    compile log4j
+    compile apacheCollections
 }
