--- a/libraries.gradle
+++ b/libraries.gradle
@@ -1,4 +1,6 @@
 ext {
     log4j = 'org.apache.logging.log4j:log4j-core:2.8.2'
     apacheCollections = 'org.apache.commons:commons-collections4:4.1'
+    jUnit = 'junit:junit:4.12'
+    mockito = 'org.mockito:mockito-core:2.8.47'
 }
