--- a/libraries.gradle
+++ b/libraries.gradle
@@ -3,4 +3,6 @@ ext {
     apacheCollections = 'org.apache.commons:commons-collections4:4.1'
     jUnit = 'junit:junit:4.12'
     mockito = 'org.mockito:mockito-core:2.8.47'
+    hamcrest = 'org.hamcrest:hamcrest-all:1.3'
+
 }
