Implement Spring Framework.

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ jar {
 dependencies {
     compile log4j
     compile apacheCollections
+    compile springContext
+    compile springContextSuppot
+    compile springEl
     testCompile jUnit
     testCompile mockito
     testCompile hamcrest
