--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ jar {
 dependencies {
     compile log4j
     compile apacheCollections
+    compile apacheCommonsLang
     compile springContext
     compile springContextSuppot
     compile springEl
