--- a/MentoringAERL-CONTROLLER/libraries.gradle
+++ b/MentoringAERL-CONTROLLER/libraries.gradle
@@ -4,4 +4,6 @@ ext {
     springCore = 'org.springframework:spring-core:4.3.11.RELEASE'
     servletApi = 'javax.servlet:javax.servlet-api:4.0.0'
     jacksonDatabind = 'com.fasterxml.jackson.core:jackson-databind:2.9.1'
+    jacksonDatabindJSR310 = 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1'
+
 }
