Implement HttpFilter for logging Requested URL and User Agent. Refactoring code.

--- a/MentoringAERL-CONTROLLER/src/main/webapp/WEB-INF/web.xml
+++ b/MentoringAERL-CONTROLLER/src/main/webapp/WEB-INF/web.xml
@@ -18,5 +18,15 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    
+    <filter>
+        <filter-name>httpFilter</filter-name>
+        <filter-class>com.epam.aerl.mentoring.filter.HttpFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>httpFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
