--- a/MentoringAERL-DAO/libraries.gradle
+++ b/MentoringAERL-DAO/libraries.gradle
@@ -10,4 +10,7 @@ ext {
     apacheCollections = 'org.apache.commons:commons-collections4:4.1'
     apacheCommonsLang = 'org.apache.commons:commons-lang3:3.6'
     dozer = 'net.sf.dozer:dozer:5.5.1'
+    mockito = 'org.mockito:mockito-core:2.8.47'
+    hamcrest = 'org.hamcrest:hamcrest-all:1.3'
+    jUnit = 'junit:junit:4.12'
 }
