Refactoring code. Fixing bugs. Create UniversityDaoImpl unit tests.

--- a/MentoringAERL-DAO/build.gradle
+++ b/MentoringAERL-DAO/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     compile jUnit
     compile mockito
     compile hamcrest
+    compile powerMockApiMockito
+    compile powerMockJUnit4RuleAgent
+    compile springTest
 }
