--- a/MentoringAERL-DAO/libraries.gradle
+++ b/MentoringAERL-DAO/libraries.gradle
@@ -13,4 +13,8 @@ ext {
     mockito = 'org.mockito:mockito-core:2.8.47'
     hamcrest = 'org.hamcrest:hamcrest-all:1.3'
     jUnit = 'junit:junit:4.12'
+    powerMockJUnit4Rule = 'org.powermock:powermock-module-junit4-rule:1.7.1'
+    powerMockJUnit4RuleAgent ='org.powermock:powermock-module-junit4-rule-agent:1.7.1'
+    powerMockApiMockito = 'org.powermock:powermock-api-mockito2:1.7.3'
+    springTest = 'org.springframework:spring-test:4.3.11.RELEASE'
 }
