Implement spring AOP for logging each interaction with Service Layer.

--- a/MentoringAERL-SERVICE/build.gradle
+++ b/MentoringAERL-SERVICE/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     testCompile project(':MentoringAERL-DAO')
     compile SimpleJSON
     compile log4j
+    compile aspectJRuntime
+    compile aspectJTools
+    compile springAOP
 }
 
 
